[tool.poetry]
name = "wroclawteambot"
version = "0.9.0"
description = ""
authors = ["onstabb <hoverflash25@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
aiogram-media-group = "^0.5.1"
beanie = "^1.18.0"
python-dotenv = "^1.0.0"
pytz = "^2023.3"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
